# RustPw

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustpw.desktop
msi-creator/: License.rtf  Product.wxs  README.md  RustPw-Installer.wixpdb
src/: main.rs
tools/: create_ico.rs
