[package]
name = "rustpw"
version = "1.0.0"
edition = "2021"
description = "A secure password manager built with Rust and Iced"
authors = ["Tom"]

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.4"
rfd = "0.15"
dirs = "5.0"
zeroize = { version = "1.8", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
